Refs #61044 fix header homepage on mobile transparent

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -15,7 +15,7 @@ header {
   &.navbar {
     .path-frontpage &,
     .page-node-type-landing &,
-    .transparent-header.page-node-type-homepage & {
+    .page-node-type-homepage & {
       position: absolute;
       z-index: 99;
       @include transition(top);
